@@ -7,8 +7,7 @@ our $VERSION = '2.003006';
 
 use Moo;
 
-use Data::Validate::IP 0.24
-    qw( is_ipv4 is_ipv6 is_private_ipv4 is_private_ipv6 );
+use Data::Validate::IP 0.25 qw( is_private_ip );
 use GeoIP2::Error::Generic;
 use GeoIP2::Error::IPAddressNotFound;
 use GeoIP2::Model::ASN;
@@ -77,7 +76,7 @@ sub _model_for_address {
                 . __PACKAGE__ );
     }
 
-    if ( is_private_ipv4($ip) || is_private_ipv6($ip) ) {
+    if ( is_private_ip($ip) ) {
         my ($method) = ( caller(1) )[3];
         GeoIP2::Error::Generic->throw(
                   message => "The IP address you provided ($ip) is not a "
