@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Updated usage of Data::Validate::IP so that we don't do separate IPv4 and
+  IPv6 checks. This provides a very small performance gain.
+
+
 2.003005 2017-05-08
 
 - Added support for the GeoLite2 ASN database.
